--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimaryDark">#1a237e</color>
+    <color name="colorPrimaryDark">#3e2723</color>
     <!--<color name="colorPrimary">#880E4F</color>-->
-    <color name="colorPrimary">#ff0092f4</color>
+    <color name="colorPrimary">#880e4f</color>
     <!--<color name="colorPrimary">#3e2723</color>-->
     <color name="colorPrimaryAlpha">#607d8b</color>
-    <color name="colorAccent">#3f51b5</color>
+    <color name="colorAccent">#880e4f</color>
     <color name="pink_100">#c5cae9</color>
     <color name="colorHeading">#e040fb</color>
     <color name="colorRedsub">#d6ff8a80</color>
