--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,9 +57,7 @@
                 android:text="Records Summary"
                 android:textColor="@color/green"
                 android:textSize="14sp"
-                android:typeface="monospace"
-
-                />
+                android:typeface="monospace" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -100,14 +98,132 @@
                 android:layout_marginTop="16dp"
                 android:onClick="@{() -> callback.openForm()}"
                 android:text="OPEN FORM" />
+
             <Button
                 android:id="@+id/openA"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
                 android:layout_marginTop="16dp"
-                android:onClick="openA"
+                android:onClick="openA1"
+                android:text="OPEN A1" />
+
+            <Button
+                android:id="@+id/openB1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:onClick="openB1"
                 android:text="OPEN B1" />
+
+            <Button
+                android:id="@+id/openB2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:onClick="openB2"
+                android:text="OPEN B2" />
+
+            <Button
+                android:id="@+id/openC1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:onClick="openC1"
+                android:text="OPEN C1" />
+
+            <Button
+                android:id="@+id/openC2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:onClick="openC2"
+                android:text="OPEN C2" />
+
+            <Button
+                android:id="@+id/openC3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:onClick="openC3"
+                android:text="OPEN C3" />
+
+            <Button
+                android:id="@+id/openC4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:onClick="openC4"
+                android:text="OPEN C4" />
+
+            <Button
+                android:id="@+id/openC5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:onClick="openC5"
+                android:text="OPEN C5" />
+
+            <Button
+                android:id="@+id/openC6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:onClick="openC6"
+                android:text="OPEN C6" />
+
+            <Button
+                android:id="@+id/openD1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:onClick="openD1"
+                android:text="OPEN D1" />
+
+            <Button
+                android:id="@+id/openD2"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:onClick="openD2"
+                android:text="OPEN D2" />
+
+            <Button
+                android:id="@+id/openD3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:onClick="openD3"
+                android:text="OPEN D3" />
+
+            <Button
+                android:id="@+id/openE"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:onClick="openE"
+                android:text="OPEN E" />
+
+            <Button
+                android:id="@+id/openF"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginTop="16dp"
+                android:onClick="openF"
+                android:text="OPEN F" />
 
             <Button
                 android:id="@+id/syncServer"
