--- a/app/src/main/res/layout/activity_section_b2.xml
+++ b/app/src/main/res/layout/activity_section_b2.xml
@@ -24,6 +24,16 @@
             android:animateLayoutChanges="true"
             android:orientation="vertical">
 
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="2dp"
+                android:background="@color/colorPrimaryDark"
+                android:gravity="center"
+                android:text="@string/kb2heading"
+                android:textSize="40sp" />
+
             <!--kb206-->
             <TextView
                 android:layout_width="match_parent"
