--- a/app/src/main/res/layout/activity_section_b1.xml
+++ b/app/src/main/res/layout/activity_section_b1.xml
@@ -55,11 +55,10 @@
 
             <EditText
                 android:id="@+id/kb101"
-                android:layout_width="0dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
                 android:layout_marginTop="5dp"
-                android:layout_weight="60"
                 android:hint="@string/times"
                 android:inputType="number"
                 android:maxLength="2"
