--- a/app/src/main/res/layout/activity_section_a1.xml
+++ b/app/src/main/res/layout/activity_section_a1.xml
@@ -3,15 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layoutDirection="rtl"
     tools:context=".ui.SectionA1Activity">
+
     <data>
+
         <import type="android.view.View" />
+
         <variable
             name="callback"
             type="edu.aku.hassannaqvi.kmc.ui.SectionA1Activity" />
     </data>
+
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -111,6 +116,7 @@
                 android:layout_marginTop="5dp"
                 android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
                 android:hint="@string/other"
+                android:inputType="textCapWords"
                 android:text='@{ka10196.checked ? ka10196x.getText.toString : ""}'
                 android:visibility='@{ka10196.checked ? View.VISIBLE : View.GONE}' />
 
@@ -222,6 +228,7 @@
                 android:layout_marginTop="5dp"
                 android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
                 android:hint="@string/other"
+                android:inputType="textCapWords"
                 android:text='@{ka10296.checked ? ka10296x.getText.toString : ""}'
                 android:visibility='@{ka10296.checked ? View.VISIBLE : View.GONE}' />
 
@@ -348,6 +355,7 @@
                 android:layout_marginTop="5dp"
                 android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
                 android:hint="@string/other"
+                android:inputType="textCapWords"
                 android:text='@{ka10396.checked ? ka10396x.getText.toString : ""}'
                 android:visibility='@{ka10396.checked ? View.VISIBLE : View.GONE}' />
 
@@ -458,6 +466,7 @@
                 android:layout_marginTop="5dp"
                 android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
                 android:hint="@string/other"
+                android:inputType="textCapWords"
                 android:text='@{ka10496.checked ? ka10496x.getText.toString : ""}'
                 android:visibility='@{ka10496.checked ? View.VISIBLE : View.GONE}' />
 
@@ -476,7 +485,7 @@
                 android:id="@+id/ka105"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
                 <RadioButton
                     android:id="@+id/ka105a"
@@ -522,6 +531,7 @@
                 android:layout_marginBottom="1dp"
                 android:digits="0123456789"
                 android:hint="@string/ka106"
+                android:inputType="number"
                 android:maxLength="2" />
 
 
@@ -682,6 +692,7 @@
                 android:layout_marginTop="5dp"
                 android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
                 android:hint="@string/other"
+                android:inputType="textCapWords"
                 android:text='@{ka10896.checked ? ka10896x.getText.toString : ""}'
                 android:visibility='@{ka10896.checked ? View.VISIBLE : View.GONE}' />
 
@@ -702,6 +713,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_weight="1.5">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="@color/colorPrimary"
+                    android:text="@string/ka109sub"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@android:color/white" />
 
                 <RadioButton
                     android:id="@+id/ka109a"
@@ -746,22 +766,11 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="2dp"
-                    android:background="@color/colorPrimaryDark"
-                    android:gravity="center"
-                    android:text="@string/ka109sub"
-                    android:textSize="30sp" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="2dp"
-                    android:background="@color/colorPrimaryDark"
-                    android:gravity="center"
+                    android:layout_marginTop="16dp"
+                    android:background="@color/colorPrimary"
                     android:text="@string/ka109sub01"
-                    android:textSize="30sp" />
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@android:color/white" />
 
                 <RadioButton
                     android:id="@+id/ka109f"
@@ -782,12 +791,11 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="2dp"
-                    android:background="@color/colorPrimaryDark"
-                    android:gravity="center"
-                    android:text="@string/ka109sub01"
-                    android:textSize="30sp" />
+                    android:layout_marginTop="16dp"
+                    android:background="@color/colorPrimary"
+                    android:text="@string/ka109sub02"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@android:color/white" />
 
                 <RadioButton
                     android:id="@+id/ka109h"
@@ -808,12 +816,11 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="2dp"
-                    android:background="@color/colorPrimaryDark"
-                    android:gravity="center"
-                    android:text="@string/kasub03"
-                    android:textSize="30sp" />
+                    android:layout_marginTop="16dp"
+                    android:background="@color/colorPrimary"
+                    android:text="@string/ka109sub03"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@android:color/white" />
 
                 <RadioButton
                     android:id="@+id/ka109j"
@@ -831,7 +838,7 @@
                     android:layout_weight="1"
                     android:text="@string/ka109k" />
 
-                <TextView
+                <!--<TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
@@ -839,7 +846,7 @@
                     android:background="@color/colorPrimaryDark"
                     android:gravity="center"
                     android:text="@string/ka109sub04"
-                    android:textSize="30sp" />
+                    android:textSize="30sp" />-->
 
                 <RadioButton
                     android:id="@+id/ka109l"
@@ -890,11 +897,12 @@
                 android:layout_marginTop="5dp"
                 android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
                 android:hint="@string/other"
+                android:inputType="textCapWords"
                 android:text='@{ka10996.checked ? ka10996x.getText.toString : ""}'
                 android:visibility='@{ka10996.checked ? View.VISIBLE : View.GONE}' />
 
 
-            <!--&lt;!&ndash;ka110&ndash;&gt;
+            <!--ka110 !-->
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -910,7 +918,16 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_weight="1.5"
-                android:orientation="horizontal">
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="@color/colorPrimary"
+                    android:text="@string/ka110sub"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@android:color/white" />
 
                 <RadioButton
                     android:id="@+id/ka110a"
@@ -955,12 +972,11 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="2dp"
-                    android:background="@color/colorPrimaryDark"
-                    android:gravity="center"
-                    android:text="@string/ka110sub"
-                    android:textSize="30sp" />
+                    android:layout_marginTop="16dp"
+                    android:background="@color/colorPrimary"
+                    android:text="@string/ka110sub01"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@android:color/white" />
 
                 <RadioButton
                     android:id="@+id/ka110f"
@@ -978,6 +994,15 @@
                     android:layout_weight="1"
                     android:text="@string/ka110g" />
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="@color/colorPrimary"
+                    android:text="@string/ka110sub02"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@android:color/white" />
+
                 <RadioButton
                     android:id="@+id/ka110h"
                     android:layout_width="match_parent"
@@ -994,6 +1019,15 @@
                     android:layout_weight="1"
                     android:text="@string/ka110i" />
 
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="@color/colorPrimary"
+                    android:text="@string/ka110sub03"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@android:color/white" />
+
                 <RadioButton
                     android:id="@+id/ka110j"
                     android:layout_width="match_parent"
@@ -1001,16 +1035,6 @@
                     android:layout_marginBottom="1dp"
                     android:layout_weight="1"
                     android:text="@string/ka110j" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="2dp"
-                    android:background="@color/colorPrimaryDark"
-                    android:gravity="center"
-                    android:text="@string/ka110sub01"
-                    android:textSize="30sp" />
 
                 <RadioButton
                     android:id="@+id/ka110k"
@@ -1069,8 +1093,9 @@
                 android:layout_marginTop="5dp"
                 android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
                 android:hint="@string/other"
+                android:inputType="textCapWords"
                 android:text='@{ka11096.checked ? ka11096x.getText.toString : ""}'
-                android:visibility='@{ka11096.checked ? View.VISIBLE : View.GONE}' />-->
+                android:visibility='@{ka11096.checked ? View.VISIBLE : View.GONE}' />
 
 
             <!--ka111-->
@@ -1325,6 +1350,7 @@
                     android:layout_marginTop="5dp"
                     android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
                     android:hint="@string/other"
+                    android:inputType="textCapWords"
                     android:text='@{ka11596.checked ? ka11596x.getText.toString : ""}'
                     android:visibility='@{ka11596.checked ? View.VISIBLE : View.GONE}' />
 
@@ -1348,6 +1374,15 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_weight="1.5">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="16dp"
+                    android:background="@color/colorPrimary"
+                    android:text="@string/ka116sub"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:textColor="@android:color/white" />
 
                 <RadioButton
                     android:id="@+id/ka116a"
@@ -1394,7 +1429,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:background="@color/colorPrimary"
-                    android:text="@string/ka116sub"
+                    android:text="@string/ka116sub01"
                     android:textAppearance="?android:attr/textAppearanceLarge"
                     android:textColor="@android:color/white" />
 
@@ -1472,6 +1507,7 @@
                 android:layout_marginTop="5dp"
                 android:digits="ABCDEFGHIJKLMNOPQRSTUVWXYZ abcdefghijklmnopqrstuvwxyz"
                 android:hint="@string/other"
+                android:inputType="textCapWords"
                 android:text='@{ka11696.checked ? ka11696x.getText.toString : ""}'
                 android:visibility='@{ka11696.checked ? View.VISIBLE : View.GONE}' />
 
@@ -1538,7 +1574,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="1dp"
                     android:digits="0123456789"
-                    android:hint="@string/ka118"
+                    android:hint="@string/ka118a"
+                    android:inputType="number"
                     android:maxLength="2" />
 
             </LinearLayout>
@@ -2173,17 +2210,6 @@
                 android:orientation="horizontal">
 
                 <Button
-                    android:id="@+id/btn_End"
-                    style="@style/buttons"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@color/red"
-                    android:onClick="@{() -> callback.BtnEnd()}"
-                    android:text="@string/end_interview"
-                    android:textColor="@color/white" />
-
-                <Button
                     android:id="@+id/btn_Continue"
                     style="@style/buttons"
                     android:layout_width="0dp"
@@ -2192,6 +2218,17 @@
                     android:background="#1ed61e"
                     android:onClick="@{() -> callback.BtnContinue()}"
                     android:text="@string/nextSection"
+                    android:textColor="@color/white" />
+
+                <Button
+                    android:id="@+id/btn_End"
+                    style="@style/buttons"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:background="@color/red"
+                    android:onClick="@{() -> callback.BtnEnd()}"
+                    android:text="@string/end_interview"
                     android:textColor="@color/white" />
 
             </LinearLayout>
